# ollamaGUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  implementation_plan.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: mcp-reference-deployment.md  ui-panels.md
docs/adr/: 0001-builtin-browser.md  0002-webview-capabilities.md
docs/spikes/: 0001-document-binary-size.md  0002-axtree-local-model.md  0003-add-child-webview-macos.md
scripts/: build-macos-10.15.sh  fixture-mcp-server.mjs
src-frontend/: App.tsx  index.css  main.tsx
src-frontend/__mocks__/: tauri-api.ts
src-frontend/components/: ArtifactPanel.tsx  BrowserPane.tsx  BrowserToolResult.tsx  DocumentArtifact.tsx  FileTreePanel.tsx  LibreOfficeOnboarding.tsx  PanelShell.tsx  Sources.tsx  TerminalPanel.tsx  WelcomeScreen.tsx
src-frontend/services/: agent.ts  agentAutonomy.ts  artifacts.ts  atCommand.ts  branching.ts  browser-tools.ts  browser.ts  browserApproval.ts  browserChromium.ts  browserPreview.ts  browserSnapshot.ts  checkpoints.ts  citations.ts  cli-tool.ts  commands.ts  compaction.ts  connections.ts  crossSessionMemory.ts  customTools.ts  db.ts  diffReview.ts  documentTools.ts  documents.ts  documentsPdf.ts  errorMessages.ts  fileTools.ts  git.ts  hashCommand.ts  imageDiff.ts  imagegen.ts  knowledge.ts  libreOfficeOnboarding.ts  manyModels.ts  mcp-http.ts  mcp-tauri.ts  mcp.ts  mcpAuth.ts  mcpBridge.ts  mcpConfig.ts  mcpPresets.ts  (+33 more)
src-frontend/test/: App.test.tsx  ArtifactPanel.test.tsx  (+90 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ax.rs  browser_chromium.rs  browser_engine.rs  browser_preview.rs  config_validation.rs  document_convert.rs  lib.rs  main.rs  odf.rs  ooxml.rs  pdf_tools.rs
(+1 files in other folders)
